--- a/src/themes/eui/eui_colors_dark.scss
+++ b/src/themes/eui/eui_colors_dark.scss
@@ -12,3 +12,30 @@ $euiColorDanger: #bf4d4d;
 $euiTextColor: #DDD;
 
 $euiFocusBackgroundColor: #191919;
+
+// Code
+
+$euiCodeBlockBackgroundColor: #2B2B2D;
+$euiCodeBlockColor: #CDD3D8;
+$euiCodeBlockSelectedBackgroundColor: #3e4451;
+$euiCodeBlockCommentColor: #656565;
+$euiCodeBlockSelectorTagColor: #C792EA;
+$euiCodeBlockStringColor: #C3E88D;
+$euiCodeBlockNumberColor: #F77669;
+$euiCodeBlockKeywordColor: #C792EA;
+$euiCodeBlockFunctionTitleColor: #75A5FF;
+$euiCodeBlockTagColor: #abb2bf;
+$euiCodeBlockNameColor: #e06c75;
+$euiCodeBlockTypeColor: #da4939;
+$euiCodeBlockAttributeColor: #80CBBF;
+$euiCodeBlockSymbolColor: #C792EA;
+$euiCodeBlockParamsColor: #EEFFF7;
+$euiCodeBlockMetaColor: #75A5FF;
+$euiCodeBlockTitleColor: #75A5FF;
+$euiCodeBlockSectionColor: #ffc66d;
+$euiCodeBlockAdditionBackgroundColor: #144212;
+$euiCodeBlockAdditionColor: #e6e1dc;
+$euiCodeBlockDeletionBackgroundColor: #600;
+$euiCodeBlockDeletionColor: #e6e1dc;
+$euiCodeBlockSelectorClassColor: #FFCB68;
+$euiCodeBlockSelectorIdColor: #F77669;
