--- a/src-docs/src/components/guide_components.scss
+++ b/src-docs/src/components/guide_components.scss
@@ -117,3 +117,4 @@ $guideZLevelHighest: $euiZLevel9 + 1000;
 
 @import "guide_sandbox/index";
 @import "guide_section/index";
+@import "guide_rule/index";
