K6 back to open sans font stack (#292)
Makes the K6 EUI theme use Open Sans. The other themes remain unaffected.

--- a/src/themes/k6/k6_globals.scss
+++ b/src/themes/k6/k6_globals.scss
@@ -1,5 +1,8 @@
-$euiFontSize:       14px;
+// Font families
+$euiFontFamily: 'Open Sans', Helvetica, Arial, sans-serif;
 
+// Font Sizes
+$euiFontSize:       14px;
 $euiFontSizeXS:     12px;
 $euiFontSizeS:      14px;
 $euiFontSizeM:      16px;
