Single page pagination, button reset, table header sorting, codeblock styling (#298)
* fix switch/checkbox prop
* table sort arrows, pagination for 1 page
* adjust sizing of codeblocks
* move text-align to euilink to be safer

--- a/src/components/code/_code_block.scss
+++ b/src/components/code/_code_block.scss
@@ -71,11 +71,11 @@
   ** 1. Size the code against the text its embedded within.
   **/
   &.euiCodeBlock--inline {
-    vertical-align: middle;
     display: inline-block;
     white-space: pre;
     color: $euiTextColor;
-    font-size: 75%; // 1
+    font-size: 90%; // 1
+    padding: 0 $euiSizeS;
     background: $euiColorLightestShade;
 
     .euiCodeBlock__pre {
