EuiButton, EuiButtonEmpty and EuiButtonIcon can now take an HREF (#316)
Buttons now switch to anchor tags if an href is present.

--- a/src/components/button/button_icon/_button_icon.scss
+++ b/src/components/button/button_icon/_button_icon.scss
@@ -6,6 +6,7 @@
   box-shadow: none;
   height: $euiSizeL;
   width: $euiSizeL;
+  line-height: $euiSizeL;
   border-radius: $euiBorderRadius;
 
   // Account for border.
