Add EuiColorPicker. Upgrade Jest to 22.0.6. (#328)

--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -10,6 +10,7 @@
 @import 'call_out/index';
 @import 'code/index';
 @import 'code_editor/index';
+@import 'color_picker/index';
 @import 'context_menu/index';
 @import 'description_list/index';
 @import 'error_boundary/index';
