--- a/src-docs/src/components/guide_section/_guide_section.scss
+++ b/src-docs/src/components/guide_section/_guide_section.scss
@@ -18,3 +18,12 @@
     height: 0;
   }
 }
+
+.guideSectionPropsTable {
+  width: auto;
+  min-width: 50%;
+
+  th, td {
+    max-width: none;
+  }
+}
