Horizontal & Complex Steps (#375)
New EuiStepsHorizontal (for tab-like progression) and EuiSubSteps for demarcating areas of non-code steps.

--- a/src/components/steps/_index.scss
+++ b/src/components/steps/_index.scss
@@ -1,1 +1,20 @@
+$euiStepNumberSize: $euiSizeXL !default;
+$euiStepNumberMargin: $euiSize !default;
+
+@mixin createStepsNumber(){
+  display: inline-block;
+  @include size($euiStepNumberSize);
+  line-height: $euiStepNumberSize;
+  border-radius: $euiStepNumberSize;
+  text-align: center;
+
+  color: $euiColorEmptyShade;
+  background-color: $euiColorPrimary;
+
+  font-size: $euiFontSize;
+  font-weight: $euiFontWeightMedium;
+}
+
 @import 'steps';
+@import 'sub_steps';
+@import 'steps_horizontal';
