--- a/src/components/steps/_steps.scss
+++ b/src/components/steps/_steps.scss
@@ -1,6 +1,3 @@
-$euiStepNumberSize: $euiSizeXL !default;
-$euiStepNumberMargin: $euiSize !default;
-
 /**
  * 1. Ensure that the step number vertically aligns with the title text
  */
@@ -18,18 +15,9 @@ $euiStepNumberMargin: $euiSize !default;
 
   .euiStep__title::before {
     content: attr(data-step-num); // Get the number from the data attribute
-    display: inline-block;
-    @include size($euiStepNumberSize);
-    line-height: $euiStepNumberSize;
-    border-radius: $euiStepNumberSize;
-    margin-right: $euiStepNumberMargin;
-    text-align: center;
-    
-    color: $euiColorEmptyShade;
-    background-color: $euiColorPrimary;
+    @include createStepsNumber();
 
-    font-size: $euiFontSize;
-    font-weight: $euiFontWeightMedium;
+    margin-right: $euiStepNumberMargin;
     vertical-align: top; /* 1 */
   }
 
@@ -37,10 +25,12 @@ $euiStepNumberMargin: $euiSize !default;
     border-left: $euiBorderThick;
     padding: $euiSize;
     margin: $euiSizeS 0;
-    
+
     // Align the content's contents with the title
     padding-left: ($euiStepNumberSize/2) - 1px + $euiStepNumberMargin;
 
     // Align content border to horizontal center of step number
     margin-left: ($euiStepNumberSize/2) - 1px;
   }
+
+
