Slimmer pagination look / feel (#380)
Pagination is now less heavy and also has a compressed view that only shows next / prev buttons.

--- a/src/components/pagination/_pagination_button.scss
+++ b/src/components/pagination/_pagination_button.scss
@@ -1,21 +1,15 @@
 .euiPaginationButton {
   font-size: $euiFontSizeS;
   padding: 0;
-  height: $euiSizeL;
-  min-width: $euiSizeXL;
   text-align: center;
+  border-radius: $euiBorderRadius;
 }
 
 .euiPaginationButton-isActive {
   pointer-events: none;
-  background-color: $euiColorPrimary;
-  color: $euiColorEmptyShade;
-  border-radius: $euiBorderRadius;
-
-  &:focus {
-    background-color: $euiColorPrimary;
-    color: $euiColorEmptyShade;
-  }
+  color: $euiColorPrimary;
+  text-decoration: underline;
+  font-weight: $euiFontWeightBold;
 }
 
 .euiPaginationButton-isPlaceholder {
