Better docs for our various tables (#387)
* Labels `TableOfRecords` as deprecated
* Consolidates `BasicTable` and `Table` into one page with a proper intro about when to use each.
* Some copyediting to make things more clear.
* Adds a `blockquote` style to `EuiText`. I didn't end up using it in the docs, but it's nice and I'm sure we will at some point so I kept it in. I did not make it it's own component, cuz I can't see when we'd every add a blockquote separate from text.
* Adds a missing changelog for the EuiTable PR.

--- a/src/components/text/_text.scss
+++ b/src/components/text/_text.scss
@@ -19,6 +19,7 @@
   p,
   ul,
   ol,
+  blockquote,
   img {
     margin-bottom: $euiSizeL;
   }
@@ -31,6 +32,40 @@
   ol {
     list-style: decimal;
     margin-left: $euiSizeL;
+  }
+
+  blockquote {
+    position: relative;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    padding: $euiSizeL;
+    max-width: 36rem;
+    font-family: Georgia,Times,Times New Roman,serif;
+    font-size: 112.5%;
+    line-height: 1.5;
+    font-style: italic;
+
+    p:last-child {
+      margin-bottom: 0;
+    }
+
+    &:before, &:after {
+      position: absolute;
+      content: "";
+      height: 2px;
+      width: 50%;
+      transform: translateX(-50%);
+      background: $euiColorDarkShade;
+    }
+
+    &:before {
+      top: 0;
+    }
+
+    &:after {
+      bottom: 0;
+    }
   }
 
   * + h1,
@@ -102,6 +137,7 @@
     p,
     ul,
     ol,
+    blockquote,
     h1,
     h2,
     h3,
