Prevent EuiToast text from overflowing. (#392)

--- a/src/components/toast/_toast.scss
+++ b/src/components/toast/_toast.scss
@@ -94,3 +94,10 @@ $toastTypes: (
 .euiToastHeader--withBody {
   margin-bottom: $euiSizeM;
 }
+
+/**
+ * 1. Prevent long lines from overflowing.
+ */
+.euiToastBody {
+  word-wrap: break-word; /* 1 */
+}
