--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -8,6 +8,7 @@
 @import 'bottom_bar/index';
 @import 'button/index';
 @import 'call_out/index';
+@import 'card/index';
 @import 'code/index';
 @import 'code_editor/index';
 @import 'color_picker/index';
