--- a/src/components/panel/_panel.scss
+++ b/src/components/panel/_panel.scss
@@ -1,6 +1,5 @@
 .euiPanel {
   @include euiBottomShadowSmall;
-
   background-color: $euiColorEmptyShade;
   border: $euiBorderThin;
   border-radius: $euiBorderRadius;
@@ -18,5 +17,23 @@
 
   &.euiPanel--flexGrowZero {
     flex-grow: 0;
+  }
+
+  &.euiPanel--isClickable {
+    // in case of button wrapper which inherently is inline-block and no width
+    display: block;
+    width: 100%;
+    text-align: left;
+
+    // transition the shadow
+    @include euiSlightShadow;
+    transition: all $euiAnimSpeedFast $euiAnimSlightResistance;
+
+    &:hover,
+    &:focus {
+      @include euiSlightShadowHover;
+      transform: translateY(-2px);
+      cursor: pointer;
+    }
   }
 }
