table-layout now set to fixed (#398)
This removes some finicky code that tried to make tables widths a bit prettier, but came with some bad drawbacks.

--- a/src/components/table/_table.scss
+++ b/src/components/table/_table.scss
@@ -6,6 +6,7 @@
   @include euiFontSizeS;
 
   width: 100%;
+  table-layout: fixed;
   border: none;
   border-collapse: collapse;
   background-color: $euiColorEmptyShade;
