--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -16,6 +16,7 @@
 @import 'description_list/index';
 @import 'error_boundary/index';
 @import 'expression/index';
+@import 'filter_group/index';
 @import 'flex/index';
 @import 'flyout/index';
 @import 'form/index';
@@ -34,6 +35,7 @@
 @import 'panel/index';
 @import 'popover/index';
 @import 'progress/index';
+@import 'search_bar/index';
 @import 'side_nav/index';
 @import 'spacer/index';
 @import 'steps/index';
