--- a/src/components/form/switch/_index.scss
+++ b/src/components/form/switch/_index.scss
@@ -1,6 +1,6 @@
-$euiSwitchHeight: $euiSizeL;
-$euiSwitchWidth: ($euiSizeL * 2) + $euiSizeXS;
-$euiSwitchThumbSize: $euiSizeL;
+$euiSwitchHeight: $euiSize * 1.25;
+$euiSwitchWidth: ($euiSize * 2.5) + $euiSizeXS;
+$euiSwitchThumbSize: $euiSwitchHeight;
 $euiSwitchIconHeight: $euiSize;
 
 @import 'switch';
