--- a/src/components/accessibility/_screen_reader.scss
+++ b/src/components/accessibility/_screen_reader.scss
@@ -1,8 +1,12 @@
-.euiScreenReaderOnly {
+@mixin euiScreenReaderOnly() {
   position: absolute;
   left: -10000px;
   top: auto;
   width: 1px;
   height: 1px;
   overflow: hidden;
+}
+
+.euiScreenReaderOnly {
+  @include euiScreenReaderOnly;
 }
