Some random fixes and more icons (#427)
* Added more icons

* No margins for <hr>

* Fix text-overflow on buttons

* #418 Add `isLoading` prop to `EuiButton`

* #421 Changed `EuiAccordion`’s `onToggleOpen` to `onToggle`

* #397 Only apply the `$euiCodeBlockSelectedBackgroundColor` variable if it is a color

--- a/src/components/accordion/_accordion_form.scss
+++ b/src/components/accordion/_accordion_form.scss
@@ -16,7 +16,7 @@
 }
 
 .euiAccordionForm__button {
-  padding: $euiSize;
+  padding: $euiSize $euiSize $euiSize 0;
 
   &:hover {
     text-decoration: none;
