--- a/src/components/loading/_loading_spinner.scss
+++ b/src/components/loading/_loading_spinner.scss
@@ -4,7 +4,7 @@
   height: $euiSizeXL;
   border-radius: 50%;
   border: solid $euiSizeXS / 2 $euiColorLightShade;
-  border-top-color: $euiColorPrimary;
+  border-color: euiLoadingSpinnerBorderColors();
   animation: euiLoadingSpinner .6s infinite linear;
 }
 
