--- a/src/components/table/_table.scss
+++ b/src/components/table/_table.scss
@@ -113,6 +113,10 @@
   justify-content: flex-end;
 }
 
+.euiTableCellContent--alignCenter {
+  justify-content: center;
+}
+
 .euiTableCellContent--truncateText {
   white-space: nowrap; /* 3 */
 
