--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -5,6 +5,7 @@
 @import 'accordion/index';
 @import 'avatar/index';
 @import 'badge/index';
+@import 'basic_table/index';
 @import 'bottom_bar/index';
 @import 'button/index';
 @import 'call_out/index';
